# py-front

./: mkdocs.yml  pyproject.toml
docs/: index.md
