[tool.poetry]
name = "py-front"
version = "0.1.0"
description = ""
authors = ["matheuslpolidoro <mattpolidoro4@gmail.com>"]
readme = "README.md"
packages = [{include = "py_front"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
